Fix alignment of "add" button

--- a/assets/css/_main.scss
+++ b/assets/css/_main.scss
@@ -31,3 +31,9 @@
 .page-header {
     margin: 0px 0 20px;
 }
+/* view - "dailys specials" */
+
+// align "add" button
+.btn-dailysspecials-add {
+    margin-top: 20px;
+}
